Footer no longer has white space underneath

--- a/style.css
+++ b/style.css
@@ -110,5 +110,5 @@ body{
     padding: 30px;
     background: #0b2448;
     position: relative;
-    margin-top: 57px;   
+    margin-top: 58px;   
 }
